<resources>
    <string name="app_name">Finance App</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create">Create Account</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="todo">TODO</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="create_transaction_title">Create Transaction</string>
    <string name="dashboard_tab">Dashboard</string>
    <string name="transaction_tab">Transactions</string>
    <string name="profile_tab">Profile</string>
    <string name="Profile">profile</string>
    <string name="Logout">logout</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string-array name="transactionType">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
    <string name="balans_title">Balance</string>
    <string name="empty_balance">0.00</string>
    <string name="title_income">income:</string>
    <string name="title_expense">expense:</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">view all</string>
    <string name="empty_goal">0.00</string>
    <string name="goal_title">Remaining</string>
    <string name="no_recent_transactions">No Recent Transactions</string>
    <string name="no_goal">No goal found for this month. Create one to get going!</string>
    <string name="create_goal">Create Goal</string>
    <string name="expended">Expended</string>
    <string name="goal">Goal</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal_expense_title">Expense Limit</string>
    <string name="limit_amount">Limit amount</string>
    <string name="creating_goal_for">Creating goal for</string>
    <string name="no_logged_in_message">You don\'t seem to be logged in</string>
    <string name="edit">Edit</string>
    <string name="e_mail">E-mail</string>
    <string name="selected_currency">Selected currency</string>
    <string name="update">Update</string>
    <string name="delete_profile">Delete profile</string>
</resources>