<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/page_padding"
    tools:context="sr.unasat.financeapp.fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/no_profile_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_logged_in_message"
            android:textSize="@dimen/normal_text_size"
            android:padding="@dimen/view_padding"/>

        <Button
            android:id="@+id/button_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/login"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/comfi"
            android:layout_marginBottom="@dimen/large_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginBottom="@dimen/large_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            android:text="@string/e_mail"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginBottom="@dimen/large_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            android:text="@string/selected_currency"/>

        <TextView
            android:id="@+id/profile_selected_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="SRD"/>

        <Button
            android:id="@+id/button_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/edit"/>

        <Button
            android:layout_marginTop="@dimen/large_margin"
            android:id="@+id/button_delete_profile"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/delete_profile"/>

    </LinearLayout>

    <include
        android:id="@+id/profile_editprofile"
        android:visibility="gone"
        layout="@layout/profile_edit" />

</LinearLayout>
