<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sr.unasat.financeapp.activities.GoalDetailActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/goal_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

    </android.support.v7.widget.Toolbar>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/page_padding">\

        <TextView
            android:id="@+id/goal_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/goal_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/medium_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_expense_title"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/goaldetail_limit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/limit_amount"
            android:inputType="numberDecimal"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginBottom="@dimen/small_margin"
            android:drawableLeft="@drawable/ic_attach_money_gray_24dp"/>

        <Button
            android:id="@+id/button_goaldetail_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_goal"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

    </LinearLayout>



</LinearLayout>
