<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sr.unasat.financeapp.activities.TransactionActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/transaction_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

    </android.support.v7.widget.Toolbar>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_padding">

        <Spinner
            android:id="@+id/spinnerTransactionType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/transactionType" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textViewTransactionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextTransactionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textViewTransactionAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextTransactionAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonSaveTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:onClick="addTransaction"/>

    </LinearLayout>



</LinearLayout>