<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--GOAL REMAINING VIEW-->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="@dimen/card_radius"
        card_view:contentPadding="@dimen/view_padding"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/goal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal_title"
                android:textSize="@dimen/medium_text_size"/>

            <TextView
                android:id="@+id/goal_remaining_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_goal"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"
                android:layout_below="@+id/goal_title"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/ic_edit_white_24dp"
                android:padding="@dimen/small_padding"
                android:elevation="@dimen/cardview_default_elevation"
                android:layout_below="@+id/goal_remaining_amount"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <!-- END GOAL REMAINING VIEW-->

    <!--GOAL VIEW-->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="@dimen/card_radius"
        card_view:contentPadding="@dimen/view_padding"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.github.lzyzsd.circleprogress.DonutProgress
                android:id="@+id/goal_progress"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large_margin"
                card_view:donut_progress="0"
                card_view:donut_max="100"
                card_view:donut_unfinished_color="@color/colorPrimary"
                card_view:donut_finished_color="@color/colorPrimary"
                card_view:donut_text_color="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/goal_limit_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_goal"
                    android:textSize="@dimen/normal_text_size"/>

                <TextView
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expended"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/goal_expended_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_goal"
                    android:textSize="@dimen/normal_text_size"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- END GOAL VIEW-->

</LinearLayout>