<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/page_padding"
    tools:context="sr.unasat.financeapp.fragments.DashboardFragment">

    <!--BALANS VIEW-->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/balans_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="@dimen/card_radius"
        card_view:contentPadding="@dimen/view_padding"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balans_title"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/balans"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:drawableStart="@drawable/ic_attach_money_white_24dp"
                    android:drawableTint="@color/cardview_dark_background"
                    android:text="@string/empty_balance"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="end">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/title_income"
                            android:textSize="@dimen/normal_text_size"
                            android:layout_marginEnd="@dimen/small_margin"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/total_income"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawableEnd="@drawable/ic_arrow_drop_up_black_24dp"
                            android:drawableTint="#00E676"
                            android:text="@string/empty_balance"
                            android:textSize="@dimen/normal_text_size"
                            android:textStyle="normal" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="end">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/title_expense"
                            android:textSize="@dimen/normal_text_size"
                            android:layout_marginEnd="@dimen/small_margin"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/total_expense"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                            android:drawableTint="#F44336"
                            android:text="@string/empty_balance"
                            android:textSize="@dimen/normal_text_size"
                            android:textStyle="normal" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>
    <!-- END BALANS VIEW-->

    <!--ACCORDION VIEW-->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/accordion_expense_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="@dimen/card_radius"
        card_view:contentPadding="@dimen/view_padding"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                    android:text="@string/recent_expenses"
                    card_view:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                    android:drawableTint="@color/colorPrimary"
                    android:text="@string/view_all"
                    android:textColor="@color/colorPrimary"
                    card_view:layout_constraintEnd_toEndOf="parent" />

            </android.support.constraint.ConstraintLayout>


            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recent_expenses_content"
                android:visibility="gone">

            </ListView>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>